[gd_scene load_steps=45 format=2]

[ext_resource path="res://HUB.gd" type="Script" id=1]
[ext_resource path="res://assets/health/full_heart.png" type="Texture" id=2]
[ext_resource path="res://assets/weapons/ranged/player/cofee_cup.png" type="Texture" id=3]
[ext_resource path="res://assets/weapons/melee/research_paper.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/restart_button.png" type="Texture" id=5]
[ext_resource path="res://GameOver.gd" type="Script" id=6]
[ext_resource path="res://ScoreScreen.gd" type="Script" id=7]
[ext_resource path="res://Health.gd" type="Script" id=8]
[ext_resource path="res://assets/power_ups/computer_charger.png" type="Texture" id=9]
[ext_resource path="res://assets/power_ups/research_paper_page.png" type="Texture" id=10]
[ext_resource path="res://assets/power_ups/suger_packet.png" type="Texture" id=11]
[ext_resource path="res://Weapons.gd" type="Script" id=12]
[ext_resource path="res://PowerUps.gd" type="Script" id=13]
[ext_resource path="res://assets/buttons/start_button.png" type="Texture" id=14]
[ext_resource path="res://StartMenu.gd" type="Script" id=15]
[ext_resource path="res://assets/menu_assets/title.png" type="Texture" id=16]
[ext_resource path="res://assets/menu_assets/credits_button.png" type="Texture" id=17]
[ext_resource path="res://assets/menu_assets/credits.png" type="Texture" id=18]
[ext_resource path="res://Credits.gd" type="Script" id=19]
[ext_resource path="res://assets/menu_assets/back_button.png" type="Texture" id=20]

[sub_resource type="DynamicFontData" id=22]
font_path = "res://fonts/SourceCodePro-Italic-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=23]
size = 100
font_data = SubResource( 22 )

[sub_resource type="Animation" id=9]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/SpeedUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/SpeedUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Stop"
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/SpeedUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/MeleeUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/MeleeUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Stop"
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/MeleeUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/RangeUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/RangeUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "Stop"
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUps/RangeUp:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float hit_opacity = 0;

void fragment(){
 COLOR.rgb = texture(TEXTURE, UV).rgb * (1.0 - hit_opacity) + vec3(1,1,1) * hit_opacity;
 COLOR.a = texture(TEXTURE, UV).a ;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/hit_opacity = 1.0

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform float hit_opacity = 0;

void fragment(){
 COLOR.rgb = texture(TEXTURE, UV).rgb * (1.0 - hit_opacity) + vec3(1,1,1) * hit_opacity;
 COLOR.a = texture(TEXTURE, UV).a ;
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/hit_opacity = 0.0

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

uniform float hit_opacity = 0;

void fragment(){
 COLOR.rgb = texture(TEXTURE, UV).rgb * (1.0 - hit_opacity) + vec3(1,1,1) * hit_opacity;
 COLOR.a = texture(TEXTURE, UV).a ;
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 14 )
shader_param/hit_opacity = 0.0

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/SourceCodePro-Italic-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=1]
size = 47
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/SourceCodePro-Italic-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=2]
size = 47
font_data = SubResource( 3 )

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("score_text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("score_label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=25]
resource_name = "blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("score_label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("score_text:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=26]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/path = NodePath("score_text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("score_label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="HUB" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameOver" type="Node" parent="."]
script = ExtResource( 6 )

[node name="GameOver" type="Label" parent="GameOver"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -172.0
margin_right = 270.0
margin_bottom = -45.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Game Over"

[node name="RestartButton" type="TextureButton" parent="GameOver"]
visible = false
margin_left = 363.0
margin_top = 380.0
margin_right = 678.0
margin_bottom = 461.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )

[node name="PowerUps" type="Node" parent="."]
script = ExtResource( 13 )

[node name="MeleeUpTimer" type="Timer" parent="PowerUps"]
wait_time = 3.0

[node name="RangedUpTimer" type="Timer" parent="PowerUps"]
wait_time = 3.0

[node name="SpeedUpTimer" type="Timer" parent="PowerUps"]
wait_time = 3.0

[node name="SpeedUpBlink" type="AnimationPlayer" parent="PowerUps"]
root_node = NodePath("../..")
anims/Blink = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/Stop = SubResource( 11 )

[node name="MeleeUpBlink" type="AnimationPlayer" parent="PowerUps"]
root_node = NodePath("../..")
anims/Blink = SubResource( 16 )
anims/RESET = SubResource( 17 )
anims/Stop = SubResource( 18 )

[node name="RangedUpBlink" type="AnimationPlayer" parent="PowerUps"]
root_node = NodePath("../..")
anims/Blink = SubResource( 19 )
anims/RESET = SubResource( 20 )
anims/Stop = SubResource( 21 )

[node name="SpeedUp" type="Sprite" parent="PowerUps"]
visible = false
material = SubResource( 8 )
position = Vector2( 538, 585 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 9 )
offset = Vector2( 1398.62, -222.816 )

[node name="MeleeUp" type="Sprite" parent="PowerUps"]
visible = false
material = SubResource( 13 )
position = Vector2( 486, 584 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 10 )
offset = Vector2( 1398.62, -222.816 )

[node name="RangeUp" type="Sprite" parent="PowerUps"]
visible = false
material = SubResource( 15 )
position = Vector2( 432, 588 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
offset = Vector2( 1398.62, -222.816 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 8 )

[node name="HealthBlinkTimer" type="Timer" parent="Health"]

[node name="Heart1" type="Sprite" parent="Health"]
position = Vector2( 875, 65 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
offset = Vector2( 178.621, -49.4828 )

[node name="Heart2" type="Sprite" parent="Health"]
position = Vector2( 805, 65 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
offset = Vector2( 178.621, -49.4828 )

[node name="Heart3" type="Sprite" parent="Health"]
position = Vector2( 735, 65 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
offset = Vector2( 178.621, -49.4828 )

[node name="Heart4" type="Sprite" parent="Health"]
position = Vector2( 665, 65 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
offset = Vector2( 178.621, -49.4828 )

[node name="Heart5" type="Sprite" parent="Health"]
position = Vector2( 595, 65 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
offset = Vector2( 178.621, -49.4828 )

[node name="Weapons" type="Node" parent="."]
script = ExtResource( 12 )

[node name="RangedSquare" type="Polygon2D" parent="Weapons"]
position = Vector2( 354, 141 )
scale = Vector2( 0.737748, 0.737748 )
color = Color( 0.235294, 0.239216, 0.278431, 1 )
polygon = PoolVector2Array( 751, 478, 751, 577, 850, 577, 850, 478 )

[node name="Ranged Weapon" type="Sprite" parent="Weapons/RangedSquare"]
position = Vector2( 798.376, 534.058 )
rotation = -0.523599
scale = Vector2( 0.257793, 0.257793 )
texture = ExtResource( 3 )

[node name="MeleeSquare" type="Polygon2D" parent="Weapons"]
position = Vector2( 249, 141 )
scale = Vector2( 0.737748, 0.737748 )
color = Color( 1, 0.0196078, 0.0196078, 1 )
polygon = PoolVector2Array( 751, 478, 751, 577, 850, 577, 850, 478 )

[node name="Melee Weapon" type="Sprite" parent="Weapons/MeleeSquare"]
position = Vector2( 799.732, 529.992 )
rotation = -0.541052
scale = Vector2( 0.162194, 0.162194 )
texture = ExtResource( 4 )

[node name="Score" type="Node" parent="."]
script = ExtResource( 7 )

[node name="score_text" type="RichTextLabel" parent="Score"]
margin_left = 11.0
margin_top = 1.0
margin_right = 306.0
margin_bottom = 64.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Score:"

[node name="score_label" type="Label" parent="Score"]
margin_left = 187.0
margin_top = 3.0
margin_right = 222.0
margin_bottom = 126.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score"]
anims/RESET = SubResource( 24 )
anims/blink = SubResource( 25 )
anims/stop = SubResource( 26 )

[node name="AnimationTimer" type="Timer" parent="Score"]
wait_time = 2.0
one_shot = true

[node name="StartMenu" type="Node" parent="."]
script = ExtResource( 15 )

[node name="Tittle" type="Sprite" parent="StartMenu"]
position = Vector2( 529, 277 )
scale = Vector2( 0.739669, 0.739669 )
texture = ExtResource( 16 )

[node name="StartButton" type="TextureButton" parent="StartMenu"]
margin_left = 404.0
margin_top = 345.0
margin_right = 617.0
margin_bottom = 420.0
texture_normal = ExtResource( 14 )

[node name="Credits" type="Node" parent="."]
script = ExtResource( 19 )

[node name="CreditsButton" type="TextureButton" parent="Credits"]
margin_left = 408.0
margin_top = 466.0
margin_right = 723.0
margin_bottom = 548.0
texture_normal = ExtResource( 17 )

[node name="Background" type="Polygon2D" parent="Credits"]
visible = false
color = Color( 0.360784, 0.356863, 0.356863, 1 )
polygon = PoolVector2Array( -6, 0, 1024, 0, 1024, 602, -4, 602 )

[node name="Credits" type="Sprite" parent="Credits"]
visible = false
position = Vector2( 493, 300.755 )
scale = Vector2( 0.669312, 0.674364 )
texture = ExtResource( 18 )

[node name="BackButton" type="TextureButton" parent="Credits"]
visible = false
margin_left = 424.0
margin_top = 528.0
margin_right = 569.0
margin_bottom = 583.0
texture_normal = ExtResource( 20 )

[connection signal="pressed" from="GameOver/RestartButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="PowerUps/MeleeUpTimer" to="PowerUps" method="_on_MeleeUpTimer_timeout"]
[connection signal="timeout" from="PowerUps/RangedUpTimer" to="PowerUps" method="_on_RangedUpTimer_timeout"]
[connection signal="timeout" from="PowerUps/SpeedUpTimer" to="PowerUps" method="_on_SpeedUpTimer_timeout"]
[connection signal="timeout" from="Score/AnimationTimer" to="Score" method="_on_AnimationTimer_timeout"]
[connection signal="pressed" from="StartMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="credits_close" from="Credits" to="GameOver" method="_on_Credits_credits_close"]
[connection signal="credits_close" from="Credits" to="StartMenu" method="_on_Credits_credits_close"]
[connection signal="credits_open" from="Credits" to="GameOver" method="_on_Credits_credits_open"]
[connection signal="credits_open" from="Credits" to="StartMenu" method="_on_Credits_credits_open"]
[connection signal="pressed" from="Credits/CreditsButton" to="Credits" method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Credits/BackButton" to="Credits" method="_on_BackButton_pressed"]
